# banking-transactions-ETL

./: .gitignore  CMakeLists.txt  README.md  makefile  score_analysis.ipynb  series.cpp
csv_creator/: make_mock.py  output_vis.ipynb  test_mock.py
data/: mock_emap.csv  mock_emap_processed.csv  regioes_estados_brasil.csv  teste_1.csv  teste_repo.csv  teste_sql.db
extras/: mock_sql.py
extras/csv_creator/: make_mock.py  make_mock_csv.py  test_mock.py
extras/grpc_client/: README.md  generate_pb.sh  grpc_mock_generator.py  requirements.txt  run_multi_client.sh  transaction_client.py
include/: dataframe.h  datarepository.h  pipelinemanager.hpp  task.h  trigger.hpp  types.h  utils.h
outputs/: README.md
proto/: transaction.proto
src/: datarepository.cpp  main.cpp  pipelinemanager.cpp  series.cpp  series.h  task.cpp  task.h  trigger.cpp
src/dataframe/: dataframe.cpp
src/datarepository/: file-repo.cpp  mem-repo.cpp  sql-repo.cpp
src/drivers/: bank.cpp  test.cpp
src/grpc_server/: transaction_server.cpp
